fixed iOS background gap and whitespace at app bottom

--- a/client/iOS/css/theme.css
+++ b/client/iOS/css/theme.css
@@ -6,6 +6,17 @@ p {
   font-weight: 500;
 }
 
+body {
+  background-image: url(../img/iOSbackground.png); 
+  background-size: 10%; 
+}
+
+#wrapper, #header, #content {
+  background-color: none;
+  background-image: none;
+  background: transparent;
+}
+
 *{
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 }
@@ -21,35 +32,21 @@ body {
 }
 
 #content {
-  background-image: url(../img/iOSbackground.png); 
-  background-size: 15%;
   padding: 0px 5px 0px 5px;
   font-family: Helvetica;
-  font-size: 0.8em;
+  font-size: 0.825em;
   text-align: justify;
   margin: 0px ;
   position: relative;
 }
 
-#wrapper {
-  background-image: url(../img/iOSbackground.png); 
-  background-size: 15%;
-}
-
 #reload_wrapper {
-  background-image: url(../img/iOSbackground.png);
-  background-size: 15%; 
-  position: relative;
-  top: 13px; 
+  position: relative; 
   padding: 10px 15px 10px 15px;
 }
 
 #logo img {
   height:9.5%;
-}
-
-#header{
-  background: transparent; 
 }
 
 #logo {
@@ -60,7 +57,13 @@ body {
   border-bottom: 1px solid #2d3642;
 }
 
-
+#hidegap {
+  background-color: black; 
+  position: fixed;
+  top: 97%;
+  min-height: 3%;
+  min-width: 100%;
+}
 
 #menu{
   height: 50px;
